# advent_of_code

./: .gitignore  Cargo.toml
2018/: Cargo.toml
2018/input/5/: input
2019/: Cargo.toml
2019/src/: lib.rs
2020/: Cargo.toml
2020/src/: lib.rs
hs_2020/: d1.hs
input/14/: ex3
